--- a/config.json
+++ b/config.json
@@ -3,12 +3,72 @@
         "Trolley",
         "Dorchester",
         "Summerville",
-        "EMSOPS"
+        "EMSOPS",
+        "10-4",
+        "10-20",
+        "10-29",
+        "10-41",
+        "10-42",
+        "10-99",
+        "Dispatch",
+        "Central",
+        "Clear",
+        "BOLO",
+        "Suspect",
+        "Perimeter",
+        "Code 3",
+        "Vehicle stop",
+        "License",
+        "Alpha",
+        "Bravo",
+        "Charlie",
+        "Delta",
+        "Echo",
+        "Foxtrot",
+        "Golf",
+        "Structure fire",
+        "Engine",
+        "Ladder",
+        "Truck",
+        "Battalion",
+        "Chief",
+        "Hydrant",
+        "Ventilation",
+        "Overhaul",
+        "Smoke report",
+        "Fully involved",
+        "Search and rescue",
+        "Secondary search",
+        "All clear",
+        "Under control",
+        "Medical assistance",
+        "Patient",
+        "Trauma",
+        "Vitals",
+        "EKG",
+        "Hospital",
+        "Responding",
+        "Ambulance",
+        "Saline",
+        "Oxygen",
+        "Pulse",
+        "Blood pressure",
+        "Cardiac",
+        "Protocol",
+        "Triage"
     ],
     "corrections": {
         "Old Charlie": "Old Trolley",
         "Somerville": "Summerville",
         "EMSOX": "EMSOPS",
-        "dogs challenger": "Dodge Challenger"
+        "dogs challenger": "Dodge Challenger",
+        "ten four": "10-4",
+        "ten twenty": "10-20",
+        "ten thirty-three": "10-33",
+        "code three": "Code 3",
+        "code two": "Code 2",
+        "radio check": "Signal check",
+        "ladder one": "Ladder 1",
+        "engine one": "Engine 1"
     }
 }
