--- a/config.json
+++ b/config.json
@@ -1,11 +1,23 @@
 {
     "vocabulary": [
+        "English",
+        "fire",
+        "police",
+        "ems",
+        "scanner",
+        "radio",
         "Trolley",
         "Dorchester",
         "Summerville",
-        "EMSOPS",
+        "Charleston",
+        "Berkeley",
+        "Colleton",
+        "EMS ops",
+        "10 codes",
         "10-4",
+        "10-17",
         "10-20",
+        "10-21",
         "10-29",
         "10-41",
         "10-42",
@@ -62,14 +74,13 @@
     "corrections": {
         "Old Charlie": "Old Trolley",
         "Somerville": "Summerville",
-        "EMSOX": "EMSOPS",
+        "EMSOX": "EMS ops",
         "dogs challenger": "Dodge Challenger",
         "ten four": "10-4",
         "ten twenty": "10-20",
         "ten thirty-three": "10-33",
         "code three": "Code 3",
         "code two": "Code 2",
-        "radio check": "Signal check",
         "ladder one": "Ladder 1",
         "engine one": "Engine 1",
         "in around": "en route"
@@ -84,6 +95,6 @@
         "no_speech_prob_cutoff": 0.2,
         "extreme_confidence_cutoff": -0.4,
         "min_window_sec": 1.0,
-        "max_window_sec": 8.0
+        "max_window_sec": 10.0
     }
 }
