--- a/config.json
+++ b/config.json
@@ -14,6 +14,7 @@
         "Charleston",
         "Berkeley",
         "Colleton",
+        "South Carolina",
         "EMS ops",
         "incident",
         "10 codes",
@@ -95,13 +96,13 @@
         "no_speech_threshold": 0.6,
         "log_prob_threshold": 0.0,
         "compression_ratio_threshold": 3.0,
-        "beam_size": 4,
+        "beam_size": 3,
         "min_silence_duration_ms": 500,
         "avg_logprob_cutoff": -1.5,
         "no_speech_prob_cutoff": 0.2,
         "extreme_confidence_cutoff": -0.4,
         "min_window_sec": 0.5,
-        "max_window_sec": 15.0,
+        "max_window_sec": 5.0,
         "noise_floor": 0.003,
         "detect_bots": false
     }
