--- a/config.json
+++ b/config.json
@@ -78,23 +78,25 @@
         "MUSC"
     ],
     "corrections": {
-        "EMSOX": "EMS ops"
+        "EMSOX": "EMS ops",
+        "Somerville": "Summerville"
     },
     "settings": {
         "device": "auto",
         "model_size": "large-v3",
         "compute_type": "auto",
-        "no_speech_threshold": 0.6,
+        "initial_prompt": "Emergency dispatch radio communications. 10-codes, unit numbers, street addresses, cross streets.",
+        "no_speech_threshold": 0.75,
         "log_prob_threshold": -1.0,
-        "compression_ratio_threshold": 3.0,
-        "beam_size": 7,
+        "compression_ratio_threshold": 2.0,
+        "beam_size": 9,
         "min_silence_duration_ms": 500,
-        "avg_logprob_cutoff": -1.1,
-        "no_speech_prob_cutoff": 0.2,
+        "avg_logprob_cutoff": -0.8,
+        "no_speech_prob_cutoff": 0.15,
         "extreme_confidence_cutoff": -0.4,
-        "min_window_sec": 1.0,
-        "max_window_sec": 8.0,
-        "noise_floor": 0.02,
+        "min_window_sec": 2.0,
+        "max_window_sec": 24.0,
+        "noise_floor": 0.03,
         "detect_bots": false,
         "debug_robo": true,
         "robot_pitch_std_threshold": 6.0,
