--- a/config.json
+++ b/config.json
@@ -30,6 +30,8 @@
         "Central",
         "Clear",
         "BOLO",
+        "CAD",
+        "MDT",
         "Suspect",
         "Perimeter",
         "Code 3",
@@ -95,7 +97,7 @@
         "no_speech_prob_cutoff": 0.15,
         "extreme_confidence_cutoff": -0.4,
         "min_window_sec": 2.0,
-        "max_window_sec": 24.0,
+        "max_window_sec": 60.0,
         "noise_floor": 0.03,
         "detect_bots": false,
         "debug_robo": true,
