--- a/config.json
+++ b/config.json
@@ -77,7 +77,9 @@
         "Respiratory",
         "Cardiac",
         "Triage",
-        "MUSC"
+        "MUSC",
+        "Trident",
+        "fall"
     ],
     "corrections": {
         "EMSOX": "EMS ops",
@@ -88,17 +90,17 @@
         "model_size": "large-v3",
         "compute_type": "auto",
         "initial_prompt": "Emergency dispatch radio communications. 10-codes, unit numbers, street addresses, cross streets.",
-        "no_speech_threshold": 0.75,
+        "no_speech_threshold": 0.6,
         "log_prob_threshold": -1.0,
         "compression_ratio_threshold": 2.0,
-        "beam_size": 9,
-        "min_silence_duration_ms": 500,
+        "beam_size": 8,
+        "min_silence_duration_ms": 750,
         "avg_logprob_cutoff": -0.8,
         "no_speech_prob_cutoff": 0.15,
         "extreme_confidence_cutoff": -0.4,
         "min_window_sec": 2.0,
-        "max_window_sec": 60.0,
-        "noise_floor": 0.03,
+        "max_window_sec": 30.0,
+        "noise_floor": 0.008,
         "detect_bots": false,
         "debug_robo": true,
         "robot_pitch_std_threshold": 6.0,
