add session loading into browser

--- a/config.json
+++ b/config.json
@@ -89,17 +89,17 @@
         "device": "auto",
         "model_size": "large-v3",
         "compute_type": "auto",
-        "initial_prompt": "Emergency dispatch radio communications. 10-codes, unit numbers, street addresses, cross streets.",
+        "initial_prompt": "Emergency dispatch radio communications for South Carolina. 10-codes, unit numbers, street addresses, cross streets.",
         "no_speech_threshold": 0.6,
         "log_prob_threshold": -1.0,
         "compression_ratio_threshold": 2.0,
         "beam_size": 8,
-        "min_silence_duration_ms": 750,
+        "min_silence_duration_ms": 500,
         "avg_logprob_cutoff": -0.8,
         "no_speech_prob_cutoff": 0.15,
         "extreme_confidence_cutoff": -0.4,
-        "min_window_sec": 2.0,
-        "max_window_sec": 30.0,
+        "min_window_sec": 1.0,
+        "max_window_sec": 24.0,
         "noise_floor": 0.008,
         "detect_bots": false,
         "debug_robo": true,
