--- a/config.json
+++ b/config.json
@@ -1,10 +1,7 @@
 {
     "vocabulary": [
-        "English",
         "fire",
-        "police",
-        "ems",
-        "scanner",
+        "EMS",
         "channel",
         "radio",
         "Trolley",
@@ -15,17 +12,8 @@
         "Berkeley",
         "Colleton",
         "South Carolina",
-        "EMS ops",
         "incident",
         "10 codes",
-        "10-4",
-        "10-17",
-        "10-20",
-        "10-21",
-        "10-29",
-        "10-41",
-        "10-42",
-        "10-99",
         "Dispatch",
         "Central",
         "Clear",
@@ -35,8 +23,6 @@
         "Suspect",
         "Perimeter",
         "Code 3",
-        "Vehicle stop",
-        "License",
         "Alpha",
         "Bravo",
         "Charlie",
@@ -53,14 +39,10 @@
         "Chief",
         "Hydrant",
         "Ventilation",
-        "Overhaul",
         "Smoke report",
         "Fully involved",
         "Search and rescue",
-        "Secondary search",
         "All clear",
-        "Under control",
-        "Medical assistance",
         "Patient",
         "fainting",
         "Trauma",
@@ -69,7 +51,6 @@
         "Hospital",
         "Responding",
         "Ambulance",
-        "Saline",
         "Oxygen",
         "liters",
         "Pulse",
@@ -94,7 +75,7 @@
         "log_prob_threshold": -1.0,
         "compression_ratio_threshold": 2.0,
         "beam_size": 8,
-        "min_silence_duration_ms": 500,
+        "min_silence_duration_ms": 200,
         "avg_logprob_cutoff": -0.8,
         "no_speech_prob_cutoff": 0.15,
         "extreme_confidence_cutoff": -0.4,
