--- a/config.json
+++ b/config.json
@@ -82,11 +82,9 @@
         "min_window_sec": 0.5,
         "max_window_sec": 17.5,
         "noise_floor": 0.008,
-        "detect_bots": false,
-        "debug_robo": true,
-        "robot_pitch_std_threshold": 6.0,
-        "robot_flatness_threshold": 0.016,
         "diarization_threshold": 0.40,
-        "min_speaker_samples": 32000
+        "min_speaker_samples": 32000,
+        "voice_profiles_dir": "voice_profiles",
+        "voice_match_threshold": 0.7
     }
 }
