--- a/config.json
+++ b/config.json
@@ -1,68 +1,68 @@
 {
     "vocabulary": [
-        "fire",
-        "EMS",
-        "channel",
-        "radio",
-        "Trolley",
-        "Bacon's",
-        "Dorchester",
-        "Summerville",
-        "Charleston",
-        "Berkeley",
-        "Colleton",
-        "South Carolina",
-        "incident",
         "10 codes",
-        "Dispatch",
-        "Central",
-        "Clear",
-        "BOLO",
-        "CAD",
-        "MDT",
-        "Suspect",
-        "Perimeter",
-        "Code 3",
-        "Alpha",
-        "Bravo",
-        "Charlie",
-        "Delta",
-        "Echo",
-        "Foxtrot",
-        "Golf",
-        "Mike",
-        "Structure fire",
-        "Engine",
-        "Ladder",
-        "Truck",
-        "Battalion",
-        "Chief",
-        "Hydrant",
-        "Ventilation",
-        "Smoke report",
-        "Fully involved",
-        "Search and rescue",
         "All clear",
-        "Patient",
-        "fainting",
-        "Trauma",
-        "Vitals",
-        "EKG",
-        "Hospital",
-        "Responding",
+        "Alpha",
         "Ambulance",
-        "Oxygen",
-        "liters",
-        "Pulse",
+        "Bacon's",
+        "Battalion",
+        "Berkeley",
         "Blood pressure",
-        "Respiratory",
+        "BOLO",
+        "Bravo",
+        "CAD",
         "Cardiac",
-        "Triage",
-        "MUSC",
-        "Trident",
+        "Central",
+        "channel",
+        "Charleston",
+        "Charlie",
+        "Chief",
+        "Clear",
+        "Code 3",
+        "Colleton",
+        "Delta",
+        "Dispatch",
+        "Dorchester",
+        "Echo",
+        "EKG",
+        "EMS",
+        "Engine",
+        "fainting",
         "fall",
+        "fire",
+        "Foxtrot",
+        "Fully involved",
+        "Golf",
+        "Hospital",
+        "Hydrant",
+        "incident",
+        "Ladder",
+        "liters",
+        "MDT",
+        "Mike",
+        "MUSC",
+        "nexton",
+        "Oxygen",
+        "Patient",
+        "Perimeter",
         "publix",
-        "nexton"
+        "Pulse",
+        "radio",
+        "Responding",
+        "Respiratory",
+        "Search and rescue",
+        "Smoke report",
+        "South Carolina",
+        "Structure fire",
+        "Summerville",
+        "Suspect",
+        "Trauma",
+        "Triage",
+        "Trident",
+        "Trolley",
+        "Truck",
+        "Ventilation",
+        "Vitals"
     ],
     "corrections": {
         "EMSOX": "EMS ops",
