Add CPU/GPU device presets with automatic fallback and recovery
- Define optimized DEVICE_PRESETS per device (GPU: int8_float16/beam 6,
  CPU: int8/beam 3/8 threads)
- Auto-fallback from GPU to CPU on model load or runtime CUDA errors
- Retry failed transcription on CPU after fallback
- Periodic GPU recovery probing (configurable via gpu_recovery_interval_min)
- Track active device state with get_active_device() and is_in_fallback()
- Update config.py, config.json, README.md, and CLAUDE.md

--- a/config.json
+++ b/config.json
@@ -100,7 +100,8 @@
         "rms_target_level": 0.1,
         "audio_buffer_window_sec": 7200,
         "audio_buffer_chunk_size_sec": 0.256,
-        "merge_timeout_ms": 500
+        "merge_timeout_ms": 500,
+        "gpu_recovery_interval_min": 10
     },
     "session_management": {
         "enable_rollover": true,
