--- a/config.json
+++ b/config.json
@@ -70,13 +70,13 @@
     },
     "settings": {
         "device": "auto",
-        "model_size": "large-v3",
+        "model_size": "medium",
         "compute_type": "int8",
         "initial_prompt": "Emergency dispatch radio communications for South Carolina. 10-codes, unit numbers, street addresses, cross streets.",
         "no_speech_threshold": 0.95,
         "log_prob_threshold": -0.8,
         "compression_ratio_threshold": 2.2,
-        "beam_size": 3,
+        "beam_size": 7,
         "min_silence_duration_ms": 500,
         "avg_logprob_cutoff": -0.5,
         "no_speech_prob_cutoff": 0.15,
